--- a/src/style.css
+++ b/src/style.css
@@ -34,25 +34,28 @@ nav {
   background-color: #2E6A50;
   display: flex;
   justify-content: space-between;
-  height: 120px;
-  width: 100wh;
+  height: 50px;
+  /* width: 100wh; */
 }
 
 
 ul {
   display: flex;
   list-style-type: none;
-  width: 600px;
+  width: fit-content;
   justify-content: space-around;
-  font-size: 20;
+  font-size: 20px;
+  align-items: center;
 }
 
 li {
   text-decoration: none;
+  padding: 10px;
+
 }
 
 h1 {
-  font-size: 150px;
+  font-size: 100px;
   margin: 0;
   padding-top: 100px;
 
@@ -60,7 +63,8 @@ h1 {
 
 p {
   margin: 0px;
-  font-size: 40px;
+  font-size: 25px;
+  line-break: strict;
 }
 
 
@@ -114,18 +118,19 @@ button:active {
 svg {
   padding-top: 10px;
   height: 75px;
-  margin: 20px;
 }
 
 h2 {
   font-size: 60px;
   margin-bottom: 0;
+  text-align: center;
+
 
 }
 
 h3 {
-  font-size: 45px;
-  margin-bottom: 0;
+  font-size: 35px;
+  margin: 0;
 
 }
 
@@ -157,6 +162,10 @@ h3 {
 .skills {
   background-color: #95D5B2;
   padding: 20px;
+  /* height: fit-content; */
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .projects {
@@ -167,31 +176,40 @@ h3 {
 
 .project-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
-  margin-top: 50px;
+  /* margin-top: 50px; */
 }
 
 .project-card {
-  height: 200px;
-  border: #2E6A50 2px solid;
+  /* height: 200px; */
+  height: fit-content;
+  margin: 5px;
+  /* border: #2E6A50 2px solid; */
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: white;
+  flex-direction: row;
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* background-color: white; */
 }
 
 a {
-  text-transform: none;
+  text-decoration: none;
   padding: 0;
   margin: 0;
+  color: #081B15;
+}
+
+a:hover {
+  color: #2E6A50;
 }
 
 .project-card img {
-  width: 300px;
-  border-bottom: #2E6A50 2px solid;
+  width: 500px;
+  /* border-bottom: #2E6A50 2px solid; */
+  /* padding: ; */
   /* margin: 10px; */
-  /* padding-top: 5px; */
+
 }
 
 
@@ -199,10 +217,87 @@ a {
 .project-card-title {
   padding: 0;
   margin: 0;
+align-items: flex-start;
+}
+
+.thing-icons {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
-.thing-icons{
+.icon-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 25px;
+  /* min-width: 80px; */
+  width: fit-content;
+}
+
+.icon-card p {
+  font-size: 20px;
+}
+
+.project-card-contents {
+  margin: 10px;
+}
+
+.Interests {
+  height: fit-content;
+}
+
+.contact-form {
+height: fit-content;
+background-color: #D7F3DC;
+}
+
+.form-container {
   display: flex;
   justify-content: center;
+}
+
+form {
+  width: 500px;
+  border: #081B15 solid 1px;
+  padding: 5px;
+  margin: 20px ;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+}
+
+label {
+  display: block;
+  margin-top: 10px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+
+button {
+margin:auto
+}
+
+button[type="submit"] {
+  background-color: #2E6A50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #45a049;
 }
