--- a/src/style.css
+++ b/src/style.css
@@ -301,3 +301,7 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color: #45a049;
 }
+
+.project-container p {
+  font-size: 20px;
+}
